<resources>
    <string name="app_name">Popular Movies</string>
    <string name="refresh">Refresh</string>
    <string name="no_images_fetched">No Movies Fetched</string>
    <string name="sort_default">popular</string>
    <string name="poster">POSTER</string>
    <string name="sort_by">Sort by</string>
    <string name="settings">Settings</string>
    <string name="user_reviews">USER REVIEWS:\n</string>
    <string name="reviews_hide">HIDE REVIEWS</string>
    <string name="show_reviews">SHOW REVIEWS</string>
    <string name="content_authority">com.example.pranavsrivatsav.popularmovies</string>
    <string name="addFavourite">+Favourite</string>
    <string name="trailers_label">TRAILERS</string>
    <string name="no_trailers_fetched_msg">No Trailers Fetched</string>
    <string name="reviews_label">REVIEWS</string>
    <string name="no_reviews_fetched_msg">No Reviews Fetched</string>
    <string name="sort_favourites">Favourites</string>
    <string name="sort_pref_key">sort_by</string>
    <string name="sort_popular">popular</string>
    <string name="InstanceState_GridPosition">GridPosition</string>
</resources>
