<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_scroll"
    tools:context=".DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#c0ca33"
            android:textStyle="bold"
            android:id="@+id/Movie_title"
            android:padding="8dp"/>

        <ImageView
            android:contentDescription="@string/poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="fill"
            android:id="@+id/Movie_poster"
            android:padding="4dp"/>

        <!--<Button-->
            <!--android:visibility="gone"-->
            <!--android:id="@+id/love_button"-->
            <!--android:layout_width="32dp"-->
            <!--android:layout_height="32dp"-->
            <!--android:background="@drawable/ic_black"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:layout_margin="16dp"/>-->

        <Button
            android:textColor="@android:color/black"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:text="@string/addFavourite"
            android:id="@+id/Movie_favourite"
            android:onClick="toggleFavourites"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#c0ca33"
                android:textStyle="bold"
                android:id="@+id/Movie_Rating"
                android:padding="4dp"/>
            <RatingBar
                android:layout_marginLeft="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="#c0ca33"
                android:layout_gravity="center_vertical"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="10"
                android:stepSize="0.1"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:id="@+id/Movie_RatingBar"/>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#c0ca33"
            android:id="@+id/Movie_date"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#c0ca33"
            android:id="@+id/Movie_synopsis"
            android:padding="4dp"/>

        <TextView
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/trailers_label"
            android:background="@android:color/holo_orange_dark"
            android:padding="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>
        <!--<View-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@android:color/holo_orange_dark"/>-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_trailers"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:textColor="#c0ca33"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:id="@+id/detail_trailer_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/no_trailers_fetched_msg"
            android:visibility="gone"/>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@android:color/holo_orange_dark"/>-->



        <!--<Button-->
            <!--android:textColor="@android:color/black"-->
            <!--android:background="@android:color/holo_orange_dark"-->
            <!--android:layout_margin="24dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="144dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:padding="4dp"-->
            <!--android:text="@string/show_reviews"-->
            <!--android:id="@+id/Movie_ToggleReview"-->
            <!--android:onClick="toggleReviews"/>-->

        <TextView
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/reviews_label"
            android:textColor="@android:color/black"
            android:background="@android:color/holo_orange_dark"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="420dp"
                 android:visibility="gone">

             </android.support.v7.widget.RecyclerView>

             <TextView
                 android:layout_marginBottom="8dp"
                 android:textColor="#c0ca33"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_margin="16dp"
                 android:id="@+id/detail_review_error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:text="@string/no_reviews_fetched_msg"
                 android:visibility="gone"/>

        </LinearLayout>
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@android:color/holo_orange_dark"/>-->


    </LinearLayout>
</ScrollView>